--- a/worldcup.html
+++ b/worldcup.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Extraliga – Sezóna 01</title>
+<title>Světový pohár</title>
 <style>
 body{font-family:Arial;margin:0}
 nav{
@@ -31,14 +31,14 @@ main{padding:20px}
 <body>
 
 <nav>
- <a href="index.html" class="active">Extraliga</a>
+ <a href="index.html" class="">Extraliga</a>
  <a href="ms.html" class="">Mistrovství světa</a>
  <a href="olympiada.html" class="">Olympijský turnaj</a>
- <a href="worldcup.html" class="">Světový pohár</a>
+ <a href="worldcup.html" class="active">Světový pohár</a>
 </nav>
 
 <main>
-<h1>Extraliga – Sezóna 01</h1>
+<h1>Světový pohár</h1>
 <p>Tato sekce bude doplněna.</p>
 </main>
 
