--- a/ms.html
+++ b/ms.html
@@ -1,46 +1,13 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head>
-<meta charset="UTF-8">
-<title>Mistrovství světa</title>
-<style>
-body{font-family:Arial;margin:0}
-nav{
- background:#1fa9e0;
- padding:10px 20px;
- display:flex;
- gap:20px;
-}
-nav a{
- color:white;
- text-decoration:none;
- font-weight:bold;
- padding:6px 10px;
- border-radius:4px;
-}
-nav a.active{
- background:white;
- color:#1fa9e0;
-}
-nav a:hover{
- background:rgba(255,255,255,0.2);
-}
-main{padding:20px}
-</style>
-</head>
+<head><meta charset="UTF-8"><title>Mistrovství světa</title></head>
 <body>
-
-<nav>
- <a href="index.html" class="">Extraliga</a>
- <a href="ms.html" class="active">Mistrovství světa</a>
- <a href="olympiada.html" class="">Olympijský turnaj</a>
- <a href="worldcup.html" class="">Světový pohár</a>
-</nav>
-
-<main>
-<h1>Mistrovství světa</h1>
-<p>Tato sekce bude doplněna.</p>
-</main>
-
+<nav><div class="menu">
+<a href="index.html">Extraliga</a>
+<a href="ms.html" class="active">Mistrovství světa</a>
+<a href="olympiada.html">Olympijský turnaj</a>
+<a href="worldcup.html">Světový pohár</a>
+</div></nav>
+<div class="wrapper"><h1>Mistrovství světa</h1><p>Bude doplněno.</p></div>
 </body>
 </html>
