--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
 <title>ELH – Sezóna 01</title>
 <style>
 body{margin:0;font-family:Arial;background:#f4f4f4}
+
+/* MENU */
 nav{background:#1fa9e0}
-nav .menu{max-width:1200px;margin:0 auto;display:flex;gap:20px;padding:12px 20px}
-nav a{color:white;text-decoration:none;font-weight:bold;padding:6px 12px;border-radius:4px}
-nav a.active{background:white;color:#1fa9e0}
+.menu{max-width:1200px;margin:0 auto;display:flex;gap:20px;padding:0 20px}
+.menu-item{position:relative}
+.menu-item>a{display:block;color:white;text-decoration:none;font-weight:bold;padding:14px 12px}
+.menu-item>a.active{background:white;color:#1fa9e0;border-radius:4px}
+.dropdown{display:none;position:absolute;top:100%;left:0;background:#fff;min-width:220px;box-shadow:0 4px 10px rgba(0,0,0,.15)}
+.dropdown a{display:block;padding:10px 12px;color:#1fa9e0;text-decoration:none}
+.dropdown a:hover{background:#f0f0f0}
+.menu-item:hover .dropdown{display:block}
+
+/* LAYOUT */
 .wrapper{max-width:1200px;margin:0 auto;background:white;min-height:100vh;padding:20px}
 table{border-collapse:collapse;width:100%;margin-bottom:30px}
 th,td{border:1px solid #999;padding:4px 6px;text-align:center}
@@ -17,17 +26,45 @@ td.team{text-align:left;width:260px}
 td.logo{width:34px}
 td.logo img{width:26px;height:26px;object-fit:contain}
 .hidden{display:none}
-button{padding:6px 10px}
 </style>
 </head>
 <body>
 
 <nav>
 <div class="menu">
+
+<div class="menu-item">
 <a class="active">Extraliga</a>
+<div class="dropdown">
+<a href="#">Extraliga – základní část</a>
+<a href="#">Extraliga – play off</a>
+</div>
+</div>
+
+<div class="menu-item">
 <a>Mistrovství světa</a>
+<div class="dropdown">
+<a href="#">MS – základní skupiny</a>
+<a href="#">MS – play off</a>
+</div>
+</div>
+
+<div class="menu-item">
 <a>Olympijský turnaj</a>
+<div class="dropdown">
+<a href="#">OH – skupiny</a>
+<a href="#">OH – play off</a>
+</div>
+</div>
+
+<div class="menu-item">
 <a>Světový pohár</a>
+<div class="dropdown">
+<a href="#">SP – skupiny</a>
+<a href="#">SP – play off</a>
+</div>
+</div>
+
 </div>
 </nav>
 
@@ -133,7 +170,6 @@ matchForm.onsubmit = async e => {
   time:Date.now()
  });
 
- // automatic rebuild
  const snap = await get(matchesRef);
  const matches = Object.values(snap.val()||{});
  const table = {};
