--- a/index.html
+++ b/index.html
@@ -26,46 +26,47 @@ td.team{text-align:left;width:260px}
 td.logo{width:34px}
 td.logo img{width:26px;height:26px;object-fit:contain}
 .hidden{display:none}
+button{padding:6px 10px}
 </style>
 </head>
 <body>
 
 <nav>
-<div class="menu">
+  <div class="menu">
 
-<div class="menu-item">
-<a class="active">Extraliga</a>
-<div class="dropdown">
-<a href="#">Extraliga – základní část</a>
-<a href="#">Extraliga – play off</a>
-</div>
-</div>
+    <div class="menu-item">
+      <a class="active">Extraliga</a>
+      <div class="dropdown">
+        <a href="index.html">Extraliga – základní část</a>
+        <a href="playoff.html">Extraliga – play off</a>
+      </div>
+    </div>
 
-<div class="menu-item">
-<a>Mistrovství světa</a>
-<div class="dropdown">
-<a href="#">MS – základní skupiny</a>
-<a href="#">MS – play off</a>
-</div>
-</div>
+    <div class="menu-item">
+      <a>Mistrovství světa</a>
+      <div class="dropdown">
+        <a href="ms.html">MS – základní skupiny</a>
+        <a href="#">MS – play off</a>
+      </div>
+    </div>
 
-<div class="menu-item">
-<a>Olympijský turnaj</a>
-<div class="dropdown">
-<a href="#">OH – skupiny</a>
-<a href="#">OH – play off</a>
-</div>
-</div>
+    <div class="menu-item">
+      <a>Olympijský turnaj</a>
+      <div class="dropdown">
+        <a href="olympiada.html">OH – skupiny</a>
+        <a href="#">OH – play off</a>
+      </div>
+    </div>
 
-<div class="menu-item">
-<a>Světový pohár</a>
-<div class="dropdown">
-<a href="#">SP – skupiny</a>
-<a href="#">SP – play off</a>
-</div>
-</div>
+    <div class="menu-item">
+      <a>Světový pohár</a>
+      <div class="dropdown">
+        <a href="worldcup.html">SP – skupiny</a>
+        <a href="#">SP – play off</a>
+      </div>
+    </div>
 
-</div>
+  </div>
 </nav>
 
 <div class="wrapper">
